// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Multi TextField 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: unset;
  background-color: white;
  min-height: 2.875rem!important;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-1 label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -moz-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  -ms-transform: translate(0.1875rem, -82%) scale(0.8)!important;
  transform: translate(0.1875rem, -82%) scale(0.8)!important;
  bottom: auto;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: 100%;
  padding: 1.3125rem 2.5rem 0.3125rem 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  position: static;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  row-gap: 0.25rem;
  z-index: 2;
}

.emotion-4 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-4>div {
  height: 1.25rem;
  border-radius: 0.25rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #f3f5f8;
  color: black;
  border: 0.0625rem solid #7a8bab;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover:not(:disabled) {
  background: #e7ebf2;
}

.emotion-5:focus-visible:not(:disabled) {
  outline: none;
}

.emotion-5>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: unset;
}

.emotion-7 {
  cursor: pointer;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #0f0f17;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-9 path {
  fill: #0f0f17;
}

.emotion-16 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: unset;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 20%;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
}

.emotion-16+label {
  font-size: 0.9375rem;
}

.emotion-16:focus {
  outline: none;
}

.emotion-16::-webkit-input-placeholder {
  color: transparent;
}

.emotion-16::-moz-placeholder {
  color: transparent;
}

.emotion-16:-ms-input-placeholder {
  color: transparent;
}

.emotion-16::placeholder {
  color: transparent;
}

.emotion-16:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-16:focus+label,
.emotion-16:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -82%) scale(0.8);
  -moz-transform: translate(0.1875rem, -82%) scale(0.8);
  -ms-transform: translate(0.1875rem, -82%) scale(0.8);
  transform: translate(0.1875rem, -82%) scale(0.8);
}

.emotion-16:disabled {
  cursor: not-allowed;
}

.emotion-17 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-18 {
  position: absolute!important;
  bottom: 0;
  right: 1rem;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 {
  cursor: pointer;
}

.emotion-21 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-21 path {
  fill: #5f6c85;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-22 svg {
  padding: 0 0.125rem;
}

.emotion-22 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-24 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-24 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div>
      <div>
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <span
                className="emotion-4"
              >
                <div
                  aria-readonly="true"
                  className="emotion-5"
                  data-testid="chip-chip_0"
                >
                  <div>
                    <div
                      className="emotion-6"
                      title="Orange"
                    >
                      Orange
                    </div>
                  </div>
                  <div
                    className="emotion-7"
                  >
                    <span
                      className="emotion-8"
                      data-testid="chip-delete-chip_0"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                </div>
              </span>
              <span
                className="emotion-4"
              >
                <div
                  aria-readonly="true"
                  className="emotion-5"
                  data-testid="chip-chip_1"
                >
                  <div>
                    <div
                      className="emotion-6"
                      title="Citrus"
                    >
                      Citrus
                    </div>
                  </div>
                  <div
                    className="emotion-7"
                  >
                    <span
                      className="emotion-8"
                      data-testid="chip-delete-chip_1"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                </div>
              </span>
              <input
                className="emotion-16"
                disabled={false}
                hintMsg="Press Enter to create multiple values"
                maxMultiValues={10}
                multi={true}
                multiValues={
                  Array [
                    "Orange",
                    "Citrus",
                  ]
                }
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Label"
                required={false}
                value=""
              />
              <label
                className="emotion-17"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                <span
                  className="emotion-8"
                  data-testid="select-right-icon"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-22"
          data-testid="error"
        >
          <span
            className="emotion-8"
            onClick={[Function]}
          >
            <span
              className="emotion-24"
            />
          </span>
          Press Enter to create multiple values
        </div>
      </div>
    </div>
    <h2>
      Controlled multi TextField
    </h2>
    <div
      style={
        Object {
          "width": "500px",
        }
      }
    >
      <div>
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <span
                className="emotion-4"
              >
                <div
                  aria-readonly="true"
                  className="emotion-5"
                  data-testid="chip-chip_0"
                >
                  <div>
                    <div
                      className="emotion-6"
                      title="existing-tag-1"
                    >
                      existing-tag-1
                    </div>
                  </div>
                  <div
                    className="emotion-7"
                  >
                    <span
                      className="emotion-8"
                      data-testid="chip-delete-chip_0"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                </div>
              </span>
              <span
                className="emotion-4"
              >
                <div
                  aria-readonly="true"
                  className="emotion-5"
                  data-testid="chip-chip_1"
                >
                  <div>
                    <div
                      className="emotion-6"
                      title="existing-tag-2"
                    >
                      existing-tag-2
                    </div>
                  </div>
                  <div
                    className="emotion-7"
                  >
                    <span
                      className="emotion-8"
                      data-testid="chip-delete-chip_1"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                </div>
              </span>
              <input
                className="emotion-16"
                hintMsg="Copy / paste comma seperated tags to add them, ex. tag1, tag2, tag3"
                multi={true}
                multiValues={
                  Array [
                    "existing-tag-1",
                    "existing-tag-2",
                  ]
                }
                multiValuesHandler={[Function]}
                name="tags"
                onClearAllValues={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMultiValueCreate={[Function]}
                onMultiValueDelete={[Function]}
                placeholder="Tags"
                required={false}
                value=""
              />
              <label
                className="emotion-17"
              >
                Tags
                 
              </label>
            </div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                <span
                  className="emotion-8"
                  data-testid="select-right-icon"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-22"
          data-testid="error"
        >
          <span
            className="emotion-8"
            onClick={[Function]}
          >
            <span
              className="emotion-24"
            />
          </span>
          Copy / paste comma seperated tags to add them, ex. tag1, tag2, tag3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-7:hover {
  background-color: #f3f5f8;
}

.emotion-7:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-10 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.75rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-10+label {
  font-size: 0.75rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10::-moz-placeholder {
  color: transparent;
}

.emotion-10:-ms-input-placeholder {
  color: transparent;
}

.emotion-10::placeholder {
  color: transparent;
}

.emotion-10:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-10:focus+label,
.emotion-10:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-10"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Icons 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-13 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-27 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-28 {
  width: 1.625rem;
  position: relative;
  height: 0.375rem;
}

.emotion-29 {
  position: absolute;
  left: 0.625rem;
  left: 0;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite linear alternate;
  animation: dotFlashing 0.7s infinite linear alternate;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.emotion-29::after,
.emotion-29::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.emotion-29::before {
  left: -0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.emotion-29::after {
  left: 0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-13"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-13"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-27"
              >
                <div
                  className="emotion-28"
                  data-testid="dots-loading"
                >
                  <div
                    className="emotion-29"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #5f6c85;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-6 path {
  fill: #5f6c85;
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-8+label {
  font-size: 0.9375rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8::-moz-placeholder {
  color: transparent;
}

.emotion-8:-ms-input-placeholder {
  color: transparent;
}

.emotion-8::placeholder {
  color: transparent;
}

.emotion-8:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-8:focus+label,
.emotion-8:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-8:disabled {
  cursor: not-allowed;
}

.emotion-9 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-10 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-17 {
  fill: #f5781b;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-17 path {
  fill: #f5781b;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </div>
            <div
              className="emotion-7"
            >
              <input
                className="emotion-8"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-9"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-10"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-17"
                />
              </span>
            </div>
            <div
              className="emotion-7"
            >
              <input
                className="emotion-8"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-9"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-10"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-17"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with and without Label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-10 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-10+label {
  font-size: 0.9375rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-10::-moz-placeholder {
  color: #5f6c85;
}

.emotion-10:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-10::placeholder {
  color: #5f6c85;
}

.emotion-10:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-10:focus+label,
.emotion-10:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-14 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-14+label {
  font-size: 0.9375rem;
}

.emotion-14:focus {
  outline: none;
}

.emotion-14::-webkit-input-placeholder {
  color: transparent;
}

.emotion-14::-moz-placeholder {
  color: transparent;
}

.emotion-14:-ms-input-placeholder {
  color: transparent;
}

.emotion-14::placeholder {
  color: transparent;
}

.emotion-14:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-14:focus+label,
.emotion-14:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-14:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-10"
                disabled={false}
                placeholder="Placeholder "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-14"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-10 path {
  fill: #5f6c85;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-28:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-31 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.75rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-31+label {
  font-size: 0.75rem;
}

.emotion-31:focus {
  outline: none;
}

.emotion-31::-webkit-input-placeholder {
  color: transparent;
}

.emotion-31::-moz-placeholder {
  color: transparent;
}

.emotion-31:-ms-input-placeholder {
  color: transparent;
}

.emotion-31::placeholder {
  color: transparent;
}

.emotion-31:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-31:focus+label,
.emotion-31:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-31:disabled {
  cursor: not-allowed;
}

.emotion-35 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-35 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-10"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-28"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-31"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-35"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-28"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-31"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-35"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-28"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-31"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-8"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-35"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #e5143d;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #e5143d;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #FF1744;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #e5143d;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-8 svg {
  padding: 0 0.125rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #FF1744;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-10 path {
  fill: #FF1744;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-20:hover {
  background-color: #f3f5f8;
}

.emotion-20:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-24 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-25 svg {
  padding: 0 0.125rem;
}

.emotion-25 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-27 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-27 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-7"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-8"
              data-testid="error"
            >
              <span
                className="emotion-9"
                onClick={[Function]}
              >
                <span
                  className="emotion-10"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <input
                      className="emotion-6"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-7"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-8"
                data-testid="error"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
                Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-20"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <input
                    className="emotion-6"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-24"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-25"
              data-testid="error"
            >
              <span
                className="emotion-9"
                onClick={[Function]}
              >
                <span
                  className="emotion-27"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-20"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <input
                      className="emotion-6"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-24"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-25"
                data-testid="error"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-27"
                  />
                </span>
                Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with prefix/suffix 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-11 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-5"
              >
                <input
                  className="emotion-6"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-5"
              >
                <input
                  className="emotion-6"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-11"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "120px",
            }
          }
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-5"
              >
                <input
                  className="emotion-6"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-11"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
